--- a/src/App.css
+++ b/src/App.css
@@ -40,8 +40,15 @@ ul.click {
   margin-left: auto;
   /* This will push the links to the right */
   padding: 15px;
+  /* width: 69%; */
+}
+.logged-in {
+  width: 69%;
 }
 
+.not-logged-in{
+  width: 34%;
+}
 /* CSS for the list items (li) */
 ul.click li {
   /* margin-left: 20px; */
@@ -198,7 +205,6 @@ nav img {
   justify-content: center;
   text-align: center;
   align-self: center;
-  margin-top: 3%;
 }
 
 
@@ -245,10 +251,11 @@ body {
 
 .upload-container {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   margin: 20px;
   padding: 10px;
+  width: 59%;
 }
 
 .upload-form {
@@ -379,4 +386,67 @@ body {
   0%, 100% { transform: translateX(-100%); } /* Initial and final positions */
   50% { transform: translateX(100%); } /* Move right to left */
 }
+
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+.card {
+    width: 100%;
+    max-width: 350px;
+    height: 100%; /* Maintain constant card height */
+    display: flex;
+    flex-direction: column;
+}
+
+.logo-container {
+    flex: 0 0 auto;
+    text-align: center;
+    padding: 4px;
+}
+
+.logo {
+    width: 100%;
+    height: auto;
+    max-height: 150px; /* Adjust the logo's height */
+    max-width: 100%; /* Adjust the logo's width */
+}
+
+@media (max-width: 576px) {
+    .container {
+        justify-content: center;
+    }
+}
+/* 
+.live-chat-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 100%;
+  overflow-y: auto;
+} */
+
+/* .video-container {
+  flex: 1;
+  padding-right: 20px;
+  overflow-y: auto;
+  /* Add video styling */
+
+
+/* .chat-container {
+  flex: 0 0 350px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 10px;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+  overflow-y: auto;
+  padding: 10px;
+ } */
+
+/* .chat-container {
+  background-color: #f5f5f5;
+} */
+
 
